# llm-tokens-atlas

./: .gitignore  CHANGELOG.md  LICENSE-DATA  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
analysis/: PIPELINE_NOTES.md  atlas_analysis.py  results.json
analysis/notebooks/: _build_notebook.py  calibration.ipynb
analysis/scripts/: filter_prompts.py  run_empirical_aligned.py
analysis/tables/: tab01_summary_stats.md  tab02_format_heatmap.md  tab03_calibration_factors.md
data/: README.md  lockfile.json  provenance.md  raw_prompts.excluded.jsonl  raw_prompts.filtered.jsonl  raw_prompts.jsonl  schema.json
docs/: REPRODUCING.md
llm_tokens_atlas/: _atlas_models.py  build_dataset.py  collect_corpus.py  count_empirical.py  count_offline.py  format_wrappers.py  install_tokenometer.sh  lockfile.py  publish_to_hf.py  tokenometer_bridge.py
scripts/: build_dataset.py  collect_corpus.py  count_empirical.py  count_offline.py  format_wrappers.py  install_tokenometer.sh  lockfile.py  publish_to_hf.py  tokenometer_bridge.py
tests/: test_atlas_analysis.py  test_card.py  test_collect_corpus.py  test_count_empirical.py  test_count_offline.py  test_format_wrappers.py  test_schema.py  test_tokenometer_bridge.py
tests/fixtures/: empirical_counts.jsonl  offline_counts.jsonl  raw_prompts.jsonl  tiny_prompts.jsonl
